--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@types/obj-file-parser": "^0.5.0",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
+  },
+  "dependencies": {
+    "obj-file-parser": "^0.5.3"
   }
 }
