--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^2.6.4"
   },
   "dependencies": {
-    "obj-file-parser": "^0.5.3"
+    "obj-file-parser": "^0.5.3",
+    "tga-js": "^1.1.1"
   }
 }
