--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "webgl",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview --host 0.0.0.0"
   },
   "devDependencies": {
     "@types/obj-file-parser": "^0.5.0",
