--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "tsc && vite build",
-    "serve": "vite preview --host 0.0.0.0"
+    "serve": "vite preview --host 0.0.0.0",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@types/obj-file-parser": "^0.5.0",
+    "gh-pages": "^3.2.3",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   },
