--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "build": "tsc && vite build",
     "serve": "vite preview --host 0.0.0.0",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "script": "ts-node"
   },
   "devDependencies": {
+    "@types/node": "^17.0.5",
     "@types/obj-file-parser": "^0.5.0",
     "gh-pages": "^3.2.3",
+    "ts-node": "^10.4.0",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   },
